--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.8.4",
     "react-data-table-component": "^6.11.6",
     "react-dom": "^16.8.4",
+    "react-icons": "^4.1.0",
     "react-modal": "^3.11.2",
     "styled-components": "^5.2.1"
   },
